# pdm-datareader

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml
examples/: demo.py
pdm_datareader/: __init__.py  tools.py
pdm_tools/: tools.py  utils.py
src/pdm_package/: pdm-tools.py
src/pdm_tools/: tools.py  utils.py
src/pdm_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_invalid_cache.py  test_username.py
