[tool.poetry]
name = "pdm-tools"
version = "2.3.0"
description = "A small python package to execute queries to PDM without having to re-authenticate every time"
authors = ["PDM TEAM <AWL@equinor.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pdm_tools" }]
repository = "https://github.com/equinor/pdm-tools"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
msal = "^1.26.0"
msal-extensions = "^1.1.0"
msal-bearer = "^0.2.1"
pyodbc = "^5.1.0"
pandas = "^2.0.3"
sqlalchemy = "^2.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
