[tool.poetry]
name = "pdm-datareader"
version = "2.5.0"
description = "A small python package to execute queries to PDM without having to re-authenticate every time"
authors = ["PDM TEAM <AWL@equinor.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pdm_datareader" }]
repository = "https://github.com/equinor/pdm-datareader"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
msal-bearer = ">0.2.1,<2.0.0"
urllib3 = [
    { version = "<2.0.0", markers = "sys_platform=='linux'" }, # FIX for use with RHEL7 environments
]
pyodbc = "^5.1.0"
pandas = "^2.2.2"
sqlalchemy = "^2.0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
