[metadata]
name = pdm-tools
version = 1.0
author = Chinazor Allen
author_email = chial@equinor.com
description =  A small python package to execute queries to PDM without having to re-authenticate every time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/equinor/pdm-tools
project_urls =
    Bug Tracker = https://github.com/equinor/pdm-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    msal
    pyodbc
    msal_extensions~=0.3.0
    pandas
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src


